--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	
    <!-- Ganti Audio di sini -->
-   <audio src="audio.mp3" id="linkmp3" class="sembunyi" controls loop></audio>
+   <audio src="audio.mp3" id="linkmp3" class="sembunyi" loop></audio>
    
    <div id="bodyblur">
      <!-- Wallpaper --><img src="https://e0.pxfuel.com/wallpapers/87/478/desktop-wallpaper-iphone-tree-pink-spring-pink-autumn.jpg" id="wallpaper"/><div id="beneranblur"></div>
