--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
   <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="iconlove.png">
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
   
 <head>
