--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
   
 <head>
-<title>buat ndaaa</title>
+<title>Dinda Amellia</title>
 </head>
 <body>
 	
